Fix mobile layout issues

--- a/static/style.css
+++ b/static/style.css
@@ -38,7 +38,7 @@ html, body {
 @media screen and (max-width: 1000px) {
   body {
     font-size: 2.65rem;
-    width: 97.5%;
+    width: 87.5%;
   }
 }
 
@@ -86,6 +86,7 @@ pre {
   background-color: var(--greyish);
   padding: 0.5rem;
   white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 /* Code inside a `pre` block does not need the styling that inline code does. */
